Added default theme reset
Pasteldot theme now shown properly when JS is disabled.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link class="theme babypink" rel="stylesheet" type="text/css" href="styles/themes/babypink.css">
         <link class="theme gameboy" rel="stylesheet" type="text/css" href="styles/themes/gameboy.css">
         
-        <link class="default" rel="stylesheet" type="text/css" href="styles/themes/pasteldot.css">
+        <link class="default" rel="stylesheet" type="text/css" href="styles/themes/default.css">
         <!-- themes end, suckaaa -->
         
         <link rel="icon" type="image/png" href="images/pastelball.png">
